[gd_scene load_steps=10 format=2]

[ext_resource path="res://resources/sprites/frog_game/f_background.png" type="Texture" id=1]
[ext_resource path="res://resources/sprites/frog_game/f_obstacles.png" type="Texture" id=2]
[ext_resource path="res://resources/sprites/frog_game/f_grass.png" type="Texture" id=3]
[ext_resource path="res://resources/scenes/frog_game/objects/Frog.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/frog_game/FrogGame.gd" type="Script" id=5]
[ext_resource path="res://resources/scenes/ui/Timer.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/scenes/frog_game/objects/SpawnPoint.tscn" type="PackedScene" id=7]
[ext_resource path="res://resources/scenes/ui/GameUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://resources/scenes/ui/Transition.tscn" type="PackedScene" id=9]

[node name="FrogGame" type="Node"]
script = ExtResource( 5 )

[node name="Street" type="Sprite" parent="."]
position = Vector2( 480, 270 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Grass" type="Sprite" parent="."]
position = Vector2( 480, 270 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Obstacles" type="Sprite" parent="."]
position = Vector2( 480, 270 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Frog" parent="." groups=[
"frog",
] instance=ExtResource( 4 )]

[node name="CarContainer" type="Node2D" parent="."]

[node name="CarSpawningPoints" type="Node2D" parent="."]

[node name="SpawnPointA" parent="CarSpawningPoints" instance=ExtResource( 7 )]
position = Vector2( 54, 350 )
direction = 1

[node name="SpawnPointB" parent="CarSpawningPoints" instance=ExtResource( 7 )]
position = Vector2( 900, 350 )
direction = -1

[node name="SpawnPointC" parent="CarSpawningPoints" instance=ExtResource( 7 )]
position = Vector2( 700, 220 )
direction = -1

[node name="SpawnPointD" parent="CarSpawningPoints" instance=ExtResource( 7 )]
position = Vector2( 54, 55 )
direction = 1

[node name="SpawnPointE" parent="CarSpawningPoints" instance=ExtResource( 7 )]
position = Vector2( 900, 55 )
direction = -1

[node name="Timer" parent="." instance=ExtResource( 6 )]
controls_text = "use  wasd"

[node name="GameUI" parent="." instance=ExtResource( 8 )]
visible = false
info_text = "GET RAN OVER!"

[node name="Transition" parent="." instance=ExtResource( 9 )]
visible = false

[connection signal="area_entered" from="Frog" to="Frog" method="_on_Frog_area_entered"]
